[gd_scene load_steps=2 format=3 uid="uid://ioqhupl3we64"]

[ext_resource type="Script" path="res://scenes/menu.gd" id="1_ydajf"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ydajf")
metadata/_edit_lock_ = true

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -264.0
offset_right = 240.0
offset_bottom = 264.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="Play" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 48
text = "Play"

[node name="Drift" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 48
text = "Drift"

[node name="Options" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 48
text = "Options"

[node name="Exit" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 48
text = "Exit"

[connection signal="pressed" from="Buttons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Buttons/Drift" to="." method="_on_drift_pressed"]
[connection signal="pressed" from="Buttons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Buttons/Exit" to="." method="_on_exit_pressed"]
